# Telegram_Shop

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  fixture.json  pyproject.toml  redis.conf  setup.cfg
telegram/: Dockerfile.bot  __init__.py  pyproject.toml
telegram/src/: __init__.py  main.py
telegram/src/config/: __init__.py  app.py  log.py
telegram/src/db/: __init__.py  database.py
telegram/src/db/factories/: __init__.py  base.py  categories.py  products.py
telegram/src/db/migrations/: env.py
telegram/src/db/migrations/versions/: 042bdfd704fd_create_table_shopping_cart.py  acd1dadff131_create_subcategories.py  (+10 more)
telegram/src/db/models/: __init__.py  base.py  category.py  channel_to_subscribe.py  product.py  products_in_shopping_cart.py  shopping_cart.py
telegram/src/db/queries/: __init__.py  categories.py  product_shopping_cart.py  products.py  shopping_cart.py
telegram/src/db/repositories/: __init__.py  categories.py  channels_to_subscribe.py
telegram/src/filters/: __init__.py  other.py
telegram/src/handlers/: __init__.py  catalog.py  products.py  shopping_cart.py  start_conversation.py
telegram/src/keyboards/: __init__.py  categories.py  channels_to_subscribe.py  main_menu.py  products.py  shopping_cart.py
telegram/src/lexicon/: __init__.py  ru.py
telegram/src/middlewares/: __init__.py  config_middleware.py  session_middleware.py
telegram/src/services/: __init__.py  products.py  shopping_cart.py  subscription_verification.py
telegram/src/states/: __init__.py  buying_product.py  catalog.py
(+22 files in other folders)
